[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "banal"
authors = [{name = "Friedrich Lindenberg", email = "friedrich@pudo.org"}]
license = {text = "MIT"}
description = "Commons of banal micro-functions for Python."
readme = "README.md"
keywords = ["utilities", "commons", "functions"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
urls = {Homepage = "http://github.com/pudo/banal"}
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["mypy", "wheel"]

[tool.setuptools]
packages = ["banal"]
zip-safe = false
include-package-data = true
namespace-packages = []

[tool.setuptools.package-data]
banal = ["py.typed"]

[tool.setuptools_scm]

[tool.distutils.bdist_wheel]
universal = 1
