[metadata]
name = banal
author = Friedrich Lindenberg
author_email = friedrich@pudo.org
license = MIT
description = Commons of banal micro-functions for Python.
keywords = utilities, commons, functions
url = http://github.com/pudo/banal
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = banal
zip_safe = False
install_requires =
include_package_data = True
namespace_packages =

[options.extras_require]
dev = mypy; wheel

[options.package_data]
banal = py.typed

[bdist_wheel]
universal=1

